Display: Fix registration form on iOS #3270 - GH#3270

--- a/app/Resources/public/css/base.css
+++ b/app/Resources/public/css/base.css
@@ -10480,4 +10480,5 @@ ul.dropdown-menu.inner > li > a {
 #registration input.register-profile[value='1']:after
 {
     top:-5px;
+    left: -2px;
 }
